# piflights

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.example.yaml  pyproject.toml
flight_display/: __init__.py  api_client.py  app.py  config.py  demo_data.py  flight_cache.py  main.py  models.py  updater.py  utils.py
flight_display/ui/: __init__.py  flight_table.py  main_window.py  status_bar.py  theme.py
scripts/: flight-display.service  install.sh  piflights.service
